--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,7 +51,7 @@ top{
     h1 {
           text-align: center;
      }
-     img{
+     .logo{
       display: block;
       margin-left: auto;
       margin-right: auto;
