--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,9 +53,9 @@ top{
           text-align: center;
      }
      .logo{
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
+      max-width: vw2;
+      width: 20%;
+      height: auto
      }
 
 }
